--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,336 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+main {
+	margin: 0 auto;
+	max-width: 90%;
+  padding: 50px 30px;
+}
+:root {
+  --primary: #ffffff;
+
+  --secondary: #d36300bd;
+  --tertiary: #d36300bd;
+  
+  --dark: #000000;
+  --error: rgb(228, 46, 1);
+  --spacing-one: calc(1rem * 0.5);
+  --spacing-two: calc(1rem);
+  --spacing-five: calc(2.5rem);
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  min-height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-weight: 600;
+  line-height: 1.75;
+  font-size: 30px;
+  letter-spacing: .1em;
+  background: var(--dark);
+  color: var(--primary);
+
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  margin: 5px 0;
+  line-height: 1.25;
+}
+
+h1 {
+  font-size: 2.25rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+p {
+  font-size: 1.1rem;
+  margin-top: 0;
+}
+.flex {
+  display: flex;
+}
+a {
+  color: var(--tertiary);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+header {
+  background: var(--dark);
+}
+
+header a {
+  color: var(--primary);
+}
+
+img {
+  max-width: 100%;
+}
+
+span[role="img"] {
+  cursor: default;
+}
+
+form {
+  width: 40%;
+}
+
+input {
+  font-size: 1rem;
+  padding: 0.25rem;
+  border: 1px solid var(--dark);
+  outline: none;
+  border-radius: 3px;
+  transition: box-shadow 0.2s;
+}
+
+input:focus {
+  border: 1px solid var(--secondary);
+  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
+}
+
+li {
+  list-style: none;
+}
+
+nav a:hover {
+  text-decoration: none;
+}
+
+nav  li {
+  cursor: pointer;
+}
+
+textarea {
+	width: 600px;
+	height: 120px;
+	border: 3px solid #cccccc;
+	padding: 5px;
+}
+
+.container {
+  width: 85%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.flex-end {
+  justify-content: flex-end;
+}
+
+.mx-1 {
+  margin-right: var(--spacing-one);
+  margin-left: var(--spacing-one);
+}
+
+.mx-2 {
+  margin-right: var(--spacing-two);
+  margin-left: var(--spacing-two);
+}
+
+.mx-3 {
+  margin-right: 200px
+}
+
+.mx-4 {
+  margin-top: 25px
+}
+
+
+
+.my-1 {
+  margin-top: var(--spacing-one);
+  margin-bottom: var(--spacing-one);
+}
+
+.my-2 {
+  margin-top: var(--spacing-two);
+  margin-bottom: var(--spacing-two);
+}
+
+.my-5 {
+  margin-top: var(--spacing-five);
+  margin-bottom: var(--spacing-five);
+}
+
+.px-1 {
+  padding-right: var(--spacing-one);
+  padding-left: var(--spacing-one);
+}
+
+.px-2 {
+  padding-right: var(--spacing-two);
+  padding-left: var(--spacing-two);
+}
+
+.py-1 {
+  padding-top: var(--spacing-one);
+  padding-bottom: var(--spacing-one);
+}
+
+.py-2 {
+  padding-top: var(--spacing-two);
+  padding-bottom: var(--spacing-two);
+}
+
+.card {
+  width: 25%;
+  text-align: center;
+}
+
+.icon {
+  width: auto;
+  height: 50px;
+  cursor: pointer;
+}
+
+.myWork {
+  width: auto;
+  height: 300px;
+  margin: 10px 10px 50px 10px;
+  cursor: pointer;
+}
+
+.left {
+  margin-left: 90px;
+  margin-top: -50px;
+}
+
+.top {
+  margin: 60px 0 10px 0;
+}
+
+.family {
+  width: auto;
+  height: 600px;
+  margin: 10px;
+  margin-bottom: 50px;
+  cursor: pointer;
+  align-content: center;
+}
+
+.paragraph {
+  background-color: var(--primary);
+  color: var(--dark);
+  border: solid;
+  border-width: 10px;
+  border-color: var(--primary);
+  margin: 10px;
+  margin-bottom: 30px;
+}
+
+.theLinks {
+  margin: 50px 10px 50px 10px;
+}
+
+.astrict{
+  margin: 0px 10px 20px 10px;
+}
+
+.theLinks:hover {
+  text-decoration: none;
+  color: var(--secondary);
+}
+
+a {
+	border-radius: 5px;
+	color: var(--primary);
+	font-weight: 600;
+	padding: 2px 4px;
+	margin-left: -2px;
+	margin-right: -2px;
+	
+}
+
+a:hover {
+  text-decoration-line: none;
+  color: var(--secondary);
+}
+
+li:hover {
+  text-decoration-line: none;
+  color: var(--secondary);
+}
+
+.navActive {
+  color: var(--secondary);
+}
+
+@media screen and (max-width: 980px ) {
+  .paragraph {
+    font-size: 35px;
+   }
+}
+
+@media screen and (max-width: 575px) {
+  .flex {
+    display: inline-block;
+  }
+
+  .myWork {
+    width: auto;
+    height: 300px;
+    margin-bottom: 100px;
+    cursor: pointer;
+  }
+  
+  .left {
+    margin-left: 0px;
+    margin-top: -100px;
+  }
+  .family {
+    width: auto;
+    height: auto;
+  }
+
+  .paragraph {
+    font-size: 20px;
+   }
 }
